<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_for_name"
            android:layout_weight="1"
            android:hint="@string/first_name_hint"/>

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_for_name"
            android:layout_weight="1"
            android:hint="@string/last_name_hint"/>

    </LinearLayout>
    <EditText
        android:id="@+id/etStreetAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_of_street"
        android:hint="@string/street_address_hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etCity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_of_local"
            android:layout_weight="1"
            android:hint="@string/city_hint"/>
        <EditText
            android:id="@+id/etState"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_of_local"
            android:layout_weight="1"
            android:hint="@string/state_hint"/>
        <EditText
            android:id="@+id/etZip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_of_local"
            android:layout_weight="1"
            android:hint="@string/zip_code_hint"/>

    </LinearLayout>

    <Button
        android:id="@+id/GeneratePerson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_button"
        android:hint="@string/generate_person_hint"
        android:textColor="@color/text_color"
        android:background="@color/background_color"
        android:onClick="onGeneratePerson"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/etPrintFirstName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_for_name"
            android:textAlignment="center"
            android:shadowColor="@color/shadow_color"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            android:textColor="@color/color_person_text"
            android:textSize="20dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/etPrintLastName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_for_name"
            android:textAlignment="center"
            android:shadowColor="@color/shadow_color"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            android:textColor="@color/color_person_text"
            android:textSize="20dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/etPrintStreet"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_of_street"
            android:textAlignment="center"
            android:shadowColor="@color/shadow_color"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            android:textColor="@color/color_person_text"
            android:textSize="20dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/etPrintCity"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_of_street"
            android:textAlignment="center"
            android:shadowColor="@color/shadow_color"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            android:textColor="@color/color_person_text"
            android:textSize="20dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/etPrintState"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_of_street"
            android:textAlignment="center"
            android:shadowColor="@color/shadow_color"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            android:textColor="@color/color_person_text"
            android:textSize="20dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/etPrintZip"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_of_street"
            android:textAlignment="center"
            android:shadowColor="@color/shadow_color"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            android:textColor="@color/color_person_text"
            android:textSize="20dp"
            android:layout_weight="1"/>


    </LinearLayout>


</LinearLayout>
